Revert "Use Java 17 language features"
Not ready to use Java 17 because the transition to Jenkins 2.479.1 needs
a compatibility layer for dependent plugins.

This reverts commit 558856fe71b48318a85bd4f6dcc1b0fc06585b60.