@@ -51,7 +51,8 @@ public class SecurityRealmWithUserFilter extends SecurityRealm {
                 baseComponent.manager,
                 username -> {
                     if (!validUserList.contains(username)) {
-                        throw new UsernameNotFoundException("%s is not listed as valid username.".formatted(username));
+                        throw new UsernameNotFoundException(
+                                String.format("%s is not listed as valid username.", username));
                     }
                     return baseComponent.userDetails.loadUserByUsername(username);
                 },
